# rapina

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  openapi.json
.claude/commands/: commit.md  create-plan.md  research-codebase.md  validate-plan.md
.github/: WEEKLY_CHANGELOG_TEMPLATE.md
.github/ISSUE_TEMPLATE/: good_first_issue.yml
.github/workflows/: audit.yml  ci.yml  docs.yml  issue-claim.yml  release.yml  scorecard.yml  welcome.yml
docs/: config.toml
docs/content/: _index.md
docs/content/blog/: 2026-01-20-rapina-alpha-series.md  2026-01-24-rapina-0-2-0.md  2026-02-10-welcome-to-blog.md  2026-02-12-rapina-0-4-0.md  2026-02-18-rapina-0-5-0.md  2026-02-22-rapina-0-6-0.md  2026-02-27-rapina-0-7-0.md  2026-03-01-rapina-0-8-0.md  2026-03-06-rapina-0-9-0.md  2026-03-16-rapina-0-10-0.md  2026-03-25-adding-a-database-with-seaorm.md  2026-03-25-getting-started-with-rapina.md  2026-04-01-rapina-0-11-0.md  2026-04-02-meet-juca.md  _index.md
docs/content/cli/: _index.md  commands.md
docs/content/guide/: _index.md  authentication.md  configuration.md  database.md  errors.md  extractors.md  getting-started.md  routing.md
docs/content/philosophy/: _index.md  ai-friendly.md  fail-fast.md  opinionated.md
docs/content/roadmap/: done.md  in-progress.md  planned.md
docs/content/tutorial/: 01-your-first-route.md  02-protected-routes.md  03-validation.md  04-error-handling.md  05-state-and-config.md  06-database-basics.md  _index.md
docs/public/: CNAME  index.html  robots.txt  search_index.en.js  sitemap.xml  style.css
docs/public/cli/: index.html
docs/public/guide/: index.html
docs/public/philosophy/: index.html
docs/sass/: style.scss
docs/static/tutorial/: codemirror.min.js  tutorial.css  tutorial.js
docs/superpowers/plans/: 2026-04-22-migrate-run-commands.md
docs/superpowers/specs/: 2026-04-22-migrate-run-commands-design.md
docs/templates/: base.html  blog-post.html  blog-section.html  changelog.html  docs-base.html  index.html  page.html  roadmap-section.html  roadmap.html  section.html  taxonomy_list.html  taxonomy_single.html  tutorial.html
docs/templates/shortcodes/: answer.html  roadmap-done-cards.html  roadmap-in-progress-cards.html  roadmap-planned-cards.html
rapina/: Cargo.toml
rapina-cli/: Cargo.toml
rapina-cli/src/: colors.rs  main.rs
rapina-cli/src/commands/: add.rs  agents.rs  codegen.rs  dev.rs  doctor.rs  entity_parser.rs  import.rs  import_openapi.rs  jobs.rs  llms.rs  migrate.rs  mod.rs  new.rs  openapi.rs  routes.rs  test.rs
rapina-cli/src/common/: env.rs  urls.rs
rapina-dx/: Cargo.toml
rapina-dx/src/: app.rs  handler.rs  lib.rs  route.rs
rapina-macros/: Cargo.toml
rapina-macros/src/: lib.rs
rapina-macros/src/schema/: analyze.rs  generate.rs  parse.rs  (+1 more)
rapina/benches/: router.rs
rapina/examples/: auth.rs  dx_demo.rs  endpoint_groups.rs  error_formats.rs  hello.rs  json.rs  macros.rs  middleware.rs  multi_path_params.rs  multipart.rs  openapi_demo.rs  sse.rs  todo_api.rs
rapina/examples/cron-scheduler/: Cargo.toml
rapina/examples/cron-scheduler/src/: main.rs
rapina/examples/demo_api/: Cargo.toml
rapina/examples/demo_api/src/: main.rs
rapina/examples/jwt-validation/: Cargo.toml
rapina/examples/jwt-validation/src/: main.rs
rapina/examples/openapi_demo/: Cargo.toml
rapina/examples/todo-app/: .env.example  Cargo.toml
rapina/examples/todo-app/src/: main.rs
rapina/examples/todo-app/src/todos/: dto.rs  handlers.rs
rapina/examples/url-shortener/: DESIGN.md  README.md
rapina/examples/url-shortener/url-shortner/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rapina/examples/url-shortener/url-shortner/src/: entity.rs  lib.rs  main.rs
rapina/examples/url-shortener/url-shortner/src/migrations/: m20260307_155631_create_urlss.rs  mod.rs
rapina/examples/url-shortener/url-shortner/src/urls/: dto.rs  error.rs  handlers.rs  mod.rs  service.rs  tests.rs
rapina/examples/websocket-chat/src/: main.rs
rapina/src/: app.rs  cache.rs  cache_redis.rs  config.rs  context.rs  cors.rs  cron_scheduler.rs  database.rs  date_cache.rs  discovery.rs  error.rs  extract.rs  handler.rs  lib.rs  migration.rs  pagination.rs  response.rs  router.rs  server.rs  state.rs  streaming.rs  test.rs  websocket.rs
rapina/src/extract/: mod.rs  multipart.rs
rapina/src/health/: config.rs  endpoint.rs
rapina/src/introspection/: endpoint.rs  llms.rs  llms_endpoint.rs  mod.rs  route_info.rs
rapina/src/introspection/snapshots/: rapina__introspection__llms__tests__to_llms_txt_empty_routes.snap  rapina__introspection__llms__tests__to_llms_txt_snapshot.snap
rapina/src/jobs/: create_rapina_jobs.rs  mod.rs  model.rs  retry.rs  worker.rs
rapina/src/jwt/: extract.rs  jwks_client.rs  mod.rs
rapina/src/metrics/: middleware.rs  prometheus.rs
rapina/src/middleware/: body_limit.rs  compression.rs  cors.rs  mod.rs  rate_limit.rs  request_log.rs  timeout.rs  tower.rs  trace_id.rs  traceparent.rs
rapina/src/observability/: mod.rs  telemetry.rs
rapina/src/openapi/: endpoint.rs  spec.rs
rapina/src/relay/: backend.rs  channel.rs  hub.rs  mod.rs  protocol.rs
rapina/src/response/: mod.rs  stream.rs
rapina/src/router/: mod.rs  static_map.rs  trie.rs
rapina/src/testing/: client.rs  snapshot.rs
rapina/tests/: cache.rs  discovery.rs  error_handling.rs  extractors.rs  llms.rs  metrics.rs  middleware.rs  migration_test.rs  multipart.rs  openapi_schema.rs  pagination.rs  relay.rs  relay_channels.rs  request_schema_test.rs  routing.rs  streaming.rs
thoughts/: pr-358-review.md
(+69 files in other folders)
