[package]
name = "rapina-dx"
version = "0.9.0"
edition = "2024"
description = "Fluet API layer for Rapina"
license = "MIT"
publish = false

[dependencies]
rapina = { path = "../rapina" }
tokio = { version = "1.50.0", features = ["full"] }
http = "1.4.0"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
inventory = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
