[package]
name = "rapina"
version = "0.11.0"
edition = "2024"
rust-version = "1.85"
description = "A fast, type-safe web framework for Rust inspired by FastAPI"
license = "MIT"
repository = "https://github.com/rapina-rs/rapina"
documentation = "https://docs.rs/rapina"
readme = "../README.md"
keywords = ["web", "framework", "http", "async", "api"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
# Async
tokio = { version = "1.51.1", features = ["full"] }

# HTTP server
hyper = { version = "1.9.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = [
  "tokio",
  "client-legacy",
  "http1",
  "server-auto",
  "server-graceful",
] }
http = "1.4.0"
http-body-util = "0.1.3"
bytes = "1.11.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }
httpdate = "1"
# FIXME: move behind a `snapshot` feature flag
regex = "1"
rust_decimal = "1"

# Environtment
dotenvy = "0.15.7"

# OpenAPI
schemars = { version = "1.2.0", features = ["chrono04", "uuid1", "rust_decimal1"] }

# JWT Authentication
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# JWKS (optional)
hyper-rustls = { version = "0.27.9", optional = true, features = ["http1", "http2"] }

# Concurrent map (used by cache + rate-limit)
dashmap = "6.1.0"

# SmallVec for stack-allocated path params
smallvec = "1"

# Compression (optional)
flate2 = { version = "1.1", optional = true }

# Multipart (optional)
multer = { version = "3.0", optional = true }

# Our macros
rapina-macros = { version = "0.11.0", path = "../rapina-macros/" }

# Auto-discovery
inventory = "0.3"

# Database (optional)
sea-orm = { version = "1.1", optional = true, features = ["runtime-tokio-rustls"] }

# Database migration (optional)
sea-orm-migration = { version = "1.1", optional = true, features = ["runtime-tokio-rustls"] }
async-trait = { version = "0.1", optional = true }

# Prometheus (optional)
prometheus = { version = '0.13', optional = true }

# Redis cache backend (optional)
redis = { version = "1.2", optional = true, features = ["tokio-comp"] }

# Tower compatibility (optional)
tower-service = { version = "0.3", optional = true }
tower-layer = { version = "0.3", optional = true }

# WebSocket (optional)
hyper-tungstenite = { version = "0.19", optional = true }
tokio-tungstenite = { version = "0.28", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }

# Cron Scheduler (optional)
tokio-cron-scheduler = { version = "0.15.1", optional = true }
tokio-util = { version = "0.7.18", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
matchit = "0.9"
nix = { version = "0.31", features = ["signal"] }
serial_test = "3"
tempfile = "3"
tower = { version = "0.5", features = ["limit"] }

[[bench]]
name = "router"
harness = false

# Windows specific import for graceful shutdown tests
[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[[example]]
name = "middleware"
required-features = ["compression", "rate-limit"]

[[example]]
name = "multipart"
required-features = ["multipart"]

[features]
default = ["compression", "rate-limit"]
rate-limit = []
compression = ["flate2"]
database = ["sea-orm", "sea-orm-migration", "async-trait"]
postgres = ["database", "sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
mysql = ["database", "sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]
sqlite = ["database", "sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
metrics = ["prometheus"]
cache-redis = ["redis"]
multipart = ["multer", "futures-util"]
tower = ["tower-service", "tower-layer"]
websocket = ["hyper-tungstenite", "tokio-tungstenite", "futures-util"]
cron-scheduler = ["tokio-cron-scheduler", "tokio-util"]
jwks = ["cron-scheduler", "hyper-rustls"]
