[package]
name = "jwt-validation"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
rapina = { path = "../../", features = ["jwks"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "0.3.23"